Initial website upload

--- a/gaming.html
+++ b/gaming.html
@@ -1,45 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikunj RM | Gaming Zone</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Gaming — ShaddyCreek__15</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
-    <nav>
-        <h1 class="logo">ShaddyCreek__15</h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gaming.html" class="active">Gaming</a></li>
-        </ul>
-    </nav>
+    <div class="container">
+        <nav>
+            <div class="logo">NR • ShaddyCreek__15</div>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="skills.html">Skills</a>
+                <a href="gaming.html" class="active">Gaming</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
 
-    <header class="hero">
-        <h2>My Gaming Highlights</h2>
-        <p>Future PS5 streams & gameplay videos will be uploaded here.</p>
-    </header>
+        <section class="card gaming-hero">
+            <h1 class="h1">Gaming Zone — ShaddyCreek__15</h1>
+            <p class="terminal">PS5 gameplay, clips, montages & future streams.</p>
 
-    <section class="section">
-        <h3>YouTube Thumbnail Showcase</h3>
-
-        <div class="thumbnail-container">
-            <div class="thumbnail-preview">
-                <img src="assets/thumbnail.png" alt="Gaming Video Thumbnail">
+            <div class="tilt-wrap" style="margin-top:12px"
+                data-local-path="/mnt/data/Gemini_Generated_Image_dcg4c4dcg4c4dcg4.png">
+                <img class="thumbnail" src="assets/images/thumbnail.png" alt="Gaming Thumbnail"
+                    data-local-path="/mnt/data/Gemini_Generated_Image_dcg4c4dcg4c4dcg4.png">
             </div>
 
-            <div class="details">
-                <h2>Gameplay Highlight – Coming Soon</h2>
-                <p>ShaddyCreek__15 • 2025</p>
+            <div style="margin-top:12px">
+                <a class="neon-btn" href="#">Live stream (coming soon)</a>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <footer>
-        <p>© 2025 Nikunj Rohit Mirajkar</p>
-    </footer>
+        <footer class="footer">© 2025 ShaddyCreek__15</footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
