--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,40 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Contact — Nikunj</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
     <div class="container">
-
-        <header class="header">
-            <div class="logo">
-                <div class="initial">NR</div>
-                <div style="font-weight:700">Nikunj Mirajkar</div>
-            </div>
-            <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
-            <nav class="nav" id="main-nav">
+        <nav>
+            <div class="logo">NR • Nikunj</div>
+            <div class="links">
                 <a href="index.html">Home</a>
-                <a href="about.html">Cloud/DevOps</a>
                 <a href="projects.html">Projects</a>
                 <a href="skills.html">Skills</a>
                 <a href="gaming.html">Gaming</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </header>
+                <a href="contact.html" class="active">Contact</a>
+            </div>
+        </nav>
 
         <section class="card">
-            <h1 class="h1">Get in Touch</h1>
+            <h1 class="h1">Contact</h1>
             <div class="terminal">
                 Email: <a href="mailto:nikunjmirajkar15@gmail.com"
                     style="color:var(--accent)">nikunjmirajkar15@gmail.com</a><br>
                 LinkedIn: <a href="https://www.linkedin.com/in/nikunjmirajkar/"
-                    style="color:var(--accent)">https://www.linkedin.com/in/nikunjmirajkar/</a><br>
-                Phone: +44 7587 288209
+                    style="color:var(--accent)">linkedin.com/in/nikunjmirajkar</a><br>
+                Location: Nottingham, UK
             </div>
         </section>
 
-        <footer class="footer">
-            <div>&lt;/&gt; Nikunj</div>
-            <div style="color:var(--muted)">Contact Info</div>
-        </footer>
-
+        <footer class="footer">© 2025 Nikunj</footer>
     </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
