--- a/skills.html
+++ b/skills.html
@@ -1,41 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-    <title>Skills | Nikunj</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="utf-8">
+    <title>Skills — Nikunj</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
+    <div class="container">
+        <nav>
+            <div class="logo">NR • Nikunj</div>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="skills.html" class="active">Skills</a>
+                <a href="gaming.html">Gaming</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
 
-    <nav>
-        <div class="logo">NR</div>
-        <div>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="skills.html">Skills</a>
-            <a href="gaming.html">Gaming</a>
-            <a href="contact.html">Contact</a>
-        </div>
-    </nav>
+        <section class="card">
+            <h1 class="h1">Skills</h1>
+            <div class="kv">
+                <div class="chip">Azure</div>
+                <div class="chip">Docker</div>
+                <div class="chip">Kubernetes</div>
+                <div class="chip">CI/CD</div>
+                <div class="chip">Python</div>
+                <div class="chip">MQTT</div>
+            </div>
+        </section>
 
-    <section class="card">
-        <h1 class="neon-title">Skills</h1>
-        <ul>
-            <li>Azure Cloud</li>
-            <li>DevOps</li>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-            <li>CI/CD — GitHub Actions, Jenkins</li>
-            <li>Python Programming</li>
-            <li>Linux & Bash</li>
-        </ul>
-    </section>
-
-    <footer>
-        © 2025 Nikunj
-    </footer>
-
+        <footer class="footer">© 2025 Nikunj</footer>
+    </div>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
