Ensured avatar is named profile.jpg

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <section class="card">
             <h1 class="h1">Cloud & DevOps</h1>
             <div class="terminal">
-                Successfully completed a Master’s program in Cloud & Enterprise Computing at Nottingham Trent University.
+                Successfully completed a Master's program in Cloud & Enterprise Computing at Nottingham Trent University.
                 Skilled in cloud-native systems, container orchestration, automation & distributed systems.
             </div>
             <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:12px">
