Final SEO, Design Upgrade, and Content Fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Nikunj Mirajkar — Cloud & DevOps</title>
+
+    <title>Nikunj Mirajkar — Cloud & DevOps Engineer</title>
+    <meta name="description"
+        content="Portfolio of Nikunj Mirajkar, a Cloud & DevOps enthusiast specializing in Azure, Docker, Kubernetes, CI/CD, and Python automation." />
+    <meta name="keywords"
+        content="Nikunj Mirajkar, DevOps, Cloud Engineer, Azure, Kubernetes, Docker, Python, CI/CD, Portfolio" />
+    <meta name="author" content="Nikunj Mirajkar" />
+
+    <meta property="og:title" content="Nikunj Mirajkar — Cloud & DevOps Portfolio" />
+    <meta property="og:description" content="Cloud-native tools, automation, and gaming." />
+    <meta property="og:image" content="https://nikunjmirajkar.com/img/profile.jpg" />
+    <meta property="og:url" content="https://nikunjmirajkar.com" />
+
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -45,6 +57,7 @@
         </section>
 
         <footer class="footer">
+            <div>Made with &lt;3 · Nikunj</div>
             <a href="gaming.html"
                 style="color:var(--neon1); text-decoration:none; font-weight:700; margin-left: auto;">Gaming Zone
                 &#10140;</a>
