--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Projects — Nikunj</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Projects — Nikunj Mirajkar</title>
+    <meta name="description" content="Technical projects involving Distributed Systems, MQTT, and CI/CD pipelines." />
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -24,6 +26,7 @@
         <section class="card">
             <h1 class="h1">Projects</h1>
             <div class="projects-grid">
+
                 <div class="project card">
                     <h4>Distributed File Storage System</h4>
                     <p>Designed and implemented a highly available, multi-server file storage solution using
@@ -37,8 +40,8 @@
                         <div class="chip">AES Encryption</div>
                     </div>
                     <div style="margin-top:12px">
-                        <a class="neon-btn" href="[LINK_TO_GITHUB]" style="font-size:14px; margin-right:8px">View
-                            Code</a>
+                        <a class="neon-btn" href="https://github.com/NikMir15" target="_blank"
+                            style="font-size:14px; margin-right:8px">View Code</a>
                     </div>
                 </div>
 
@@ -54,8 +57,8 @@
                         <div class="chip">Real-Time Data</div>
                     </div>
                     <div style="margin-top:12px">
-                        <a class="neon-btn" href="[LINK_TO_GITHUB]" style="font-size:14px; margin-right:8px">View
-                            Code</a>
+                        <a class="neon-btn" href="https://github.com/NikMir15" target="_blank"
+                            style="font-size:14px; margin-right:8px">View Code</a>
                     </div>
                 </div>
 
@@ -71,8 +74,8 @@
                         <div class="chip">Azure DevOps</div>
                     </div>
                     <div style="margin-top:12px">
-                        <a class="neon-btn" href="[LINK_TO_GITHUB]" style="font-size:14px; margin-right:8px">View
-                            Config</a>
+                        <a class="neon-btn" href="https://github.com/NikMir15" target="_blank"
+                            style="font-size:14px; margin-right:8px">View Config</a>
                     </div>
                 </div>
             </div>
