--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Skills — Nikunj</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Skills — Nikunj Mirajkar</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
