--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>About — Nikunj</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>About — Nikunj Mirajkar</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -24,7 +25,7 @@
         <section class="card">
             <h1 class="h1">Cloud & DevOps</h1>
             <div class="terminal">
-                Successfully completed a Master's program in Cloud & Enterprise Computing at Nottingham Trent University.
+                Pursuing MSc Cloud & Enterprise Computing at Nottingham Trent University.
                 Skilled in cloud-native systems, container orchestration, automation & distributed systems.
             </div>
             <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:12px">
