--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contact — Nikunj</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Contact — Nikunj Mirajkar</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -28,7 +29,7 @@
                     style="color:var(--accent)">nikunjmirajkar15@gmail.com</a><br>
                 LinkedIn: <a href="https://www.linkedin.com/in/nikunjmirajkar/"
                     style="color:var(--accent)">https://www.linkedin.com/in/nikunjmirajkar/</a><br>
-                Location: United Kingdom
+                Location: Nottingham, UK
             </div>
         </section>
 
