Updated site content with resume details

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <section class="card">
             <h1 class="h1">Get in Touch</h1>
             <div class="terminal">
-                Email: <a href="mailto:nikunjmirajkar15@gmail.com"
+                Email: <a href="mailto:nikunjmir1506@gmail.com"
                     style="color:var(--accent)">nikunjmirajkar15@gmail.com</a><br>
                 LinkedIn: <a href="https://www.linkedin.com/in/nikunjmirajkar/"
                     style="color:var(--accent)">https://www.linkedin.com/in/nikunjmirajkar/</a><br>
