Clean UI, smooth animations, simple SEO, remove resume and OG

--- a/contact.html
+++ b/contact.html
@@ -4,46 +4,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Nikunj Mirajkar</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="description" content="Contact Nikunj Mirajkar — open to DevOps, Cloud, Platform and Infrastructure roles in the UK." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://nikunjmirajkar.com/contact.html" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">Nikunj</div>
-
     <ul class="nav-links" id="main-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="gaming.html">Gaming</a></li>
-      <li><a class="active" href="contact.html">Contact</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a href="/skills.html">Skills</a></li>
+      <li><a href="/gaming.html">Gaming</a></li>
+      <li><a class="active" href="/contact.html">Contact</a></li>
     </ul>
-
     <div class="menu-toggle nav-toggle">&#9776;</div>
   </nav>
 
-  <header class="page-hero reveal">
-    <h1>Contact</h1>
-    <p>Open to Graduate / Entry-Level DevOps, Cloud, Platform & Infrastructure roles (UK)</p>
+  <header class="page-hero" data-stagger="container">
+    <h1 class="animate">Contact</h1>
+    <p class="animate">Open to Graduate / Entry-Level DevOps, Cloud, Platform & Infrastructure roles (UK)</p>
   </header>
 
-  <main class="container reveal">
-    <div class="card">
+  <main class="container" data-stagger="container">
+    <div class="card animate">
       <p><strong>Availability:</strong> Immediate</p>
       <p><strong>Right to work in the UK.</strong></p>
-
       <p><strong>Email:</strong> <a href="mailto:nikunjmir1506@gmail.com">nikunjmir1506@gmail.com</a></p>
       <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nikunjmirajkar/" target="_blank" rel="noopener noreferrer">linkedin.com/in/nikunjmirajkar</a></p>
       <p><strong>GitHub:</strong> <a href="https://github.com/NikMir15" target="_blank" rel="noopener noreferrer">github.com/NikMir15</a></p>
+      <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
+        <a class="btn" href="mailto:nikunjmir1506@gmail.com">Email Me</a>
+        <a class="btn btn-outline" href="https://www.linkedin.com/in/nikunjmirajkar/" target="_blank" rel="noopener noreferrer">Connect on LinkedIn</a>
+      </div>
     </div>
   </main>
 
-  <footer>
-    &copy; 2026 Nikunj Mirajkar. All rights reserved.
-  </footer>
+  <footer>&copy; 2026 Nikunj Mirajkar. All rights reserved.</footer>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
