--- a/gaming.html
+++ b/gaming.html
@@ -4,54 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gaming | Nikunj Mirajkar</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="description" content="Gaming side of Nikunj Mirajkar — strategy, teamwork and performance mindset." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://nikunjmirajkar.com/gaming.html" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">Nikunj</div>
-
     <ul class="nav-links" id="main-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a class="active" href="gaming.html">Gaming</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a href="/skills.html">Skills</a></li>
+      <li><a class="active" href="/gaming.html">Gaming</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
-
     <div class="menu-toggle nav-toggle">&#9776;</div>
   </nav>
 
-  <header class="page-hero reveal">
-    <h1>Gaming</h1>
-    <p>Tech + Gaming — strategy, teamwork & performance mindset 🎮</p>
+  <header class="page-hero" data-stagger="container">
+    <h1 class="animate">Gaming</h1>
+    <p class="animate">Tech + Gaming — strategy, teamwork & performance mindset 🎮</p>
   </header>
 
-  <main class="container reveal">
+  <main class="container" data-stagger="container">
     <div class="projects-grid">
-      <div class="card">
+      <div class="card animate">
         <h3>Why Gaming?</h3>
-        <p>Improves strategic thinking, decision-making, teamwork, and optimisation mindset.</p>
+        <p>Gaming improves decision-making, consistency, strategic thinking, and calm execution under pressure.</p>
       </div>
-
-      <div class="card">
+      <div class="card animate">
         <h3>Favourite Games</h3>
-        <p>FIFA • Call of Duty • Spider-Man • Competitive + story games.</p>
+        <p>FIFA • Call of Duty • Story games • Competitive games</p>
       </div>
-
-      <div class="card">
-        <h3>Highlights</h3>
-        <p>Add PS5 clips/screenshots anytime (YouTube links if you upload later).</p>
+      <div class="card animate">
+        <h3>Clips / Highlights</h3>
+        <p>Add PS5 clips anytime. If you upload to YouTube later, add links here.</p>
       </div>
     </div>
   </main>
 
-  <footer>
-    &copy; 2026 Nikunj Mirajkar. All rights reserved.
-  </footer>
+  <footer>&copy; 2026 Nikunj Mirajkar. All rights reserved.</footer>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
