--- a/index.html
+++ b/index.html
@@ -3,66 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nikunj Mirajkar | Portfolio</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <title>Nikunj Mirajkar | Cloud & DevOps Portfolio</title>
+  <meta name="description" content="Cloud & DevOps graduate in Nottingham, UK. AWS, Terraform, Docker, CI/CD, Linux and cloud-native projects." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://nikunjmirajkar.com/" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">Nikunj</div>
-
     <ul class="nav-links" id="main-nav">
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="gaming.html">Gaming</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a class="active" href="/index.html">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a href="/skills.html">Skills</a></li>
+      <li><a href="/gaming.html">Gaming</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
-
     <div class="menu-toggle nav-toggle">&#9776;</div>
   </nav>
 
-  <section class="hero reveal">
-    <img src="img/profile.jpg" alt="Nikunj Mirajkar" class="hero-img">
-    <h1>Hello, I'm Nikunj Mirajkar</h1>
+  <section class="hero" data-stagger="container">
+    <img src="/img/profile.jpg" alt="Nikunj Mirajkar" class="hero-img animate" />
+    <h1 class="animate">Hello, I'm Nikunj Mirajkar</h1>
+    <p class="hero-sub animate">Cloud & DevOps Graduate • AWS • Terraform • Docker • CI/CD • Linux • Microservices</p>
+    <p class="hero-sub animate">I build scalable, secure, production-ready systems with automation-first practices.</p>
 
-    <p class="hero-sub">
-      Cloud & DevOps Graduate • AWS • Terraform • Docker • CI/CD • Linux • Microservices
-    </p>
-
-    <p class="hero-sub">
-      I build scalable, secure, production-ready systems with automation-first practices.
-    </p>
-
-    <div class="badge-row">
+    <div class="badge-row animate">
       <span class="skill-badge">DevOps Engineer</span>
       <span class="skill-badge">Platform Engineer</span>
       <span class="skill-badge">Cloud Engineer</span>
       <span class="skill-badge">Infrastructure</span>
     </div>
 
-    <div class="hero-cta">
-      <a href="projects.html" class="btn">View Projects</a>
-      <a href="contact.html" class="btn btn-outline">Hire / Connect</a>
+    <div class="hero-cta animate">
+      <a href="/projects.html" class="btn">View Projects</a>
+      <a href="/contact.html" class="btn btn-outline">Hire / Connect</a>
     </div>
 
-    <p class="hero-note"><strong>Right to work in the UK.</strong></p>
+    <p class="hero-note animate"><strong>Right to work in the UK.</strong></p>
   </section>
 
-  <section class="section reveal">
-    <h2>Operational Focus</h2>
-    <p class="section-text">
-      I focus on reliability and deployment quality: CI/CD automation, secure networking, HTTPS routing,
-      container networking, and debugging production issues like CORS, routing, and load balancers.
+  <section class="section" data-stagger="container">
+    <h2 class="animate">Operational Focus</h2>
+    <p class="section-text animate">
+      CI/CD automation, secure networking, HTTPS routing, container networking, and debugging production issues like CORS,
+      routing, and load balancers.
     </p>
   </section>
 
-  <footer>
-    &copy; 2026 Nikunj Mirajkar. All rights reserved.
-  </footer>
+  <footer>&copy; 2026 Nikunj Mirajkar. All rights reserved.</footer>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
