--- a/projects.html
+++ b/projects.html
@@ -4,39 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects | Nikunj Mirajkar</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="description" content="Projects by Nikunj Mirajkar — live GitHub repositories fetched automatically." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://nikunjmirajkar.com/projects.html" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">Nikunj</div>
-
     <ul class="nav-links" id="main-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a class="active" href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="gaming.html">Gaming</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a class="active" href="/projects.html">Projects</a></li>
+      <li><a href="/skills.html">Skills</a></li>
+      <li><a href="/gaming.html">Gaming</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
-
     <div class="menu-toggle nav-toggle">&#9776;</div>
   </nav>
 
-  <header class="page-hero reveal">
-    <h1>Projects</h1>
-    <p>Automatically fetched from my GitHub profile</p>
+  <header class="page-hero" data-stagger="container">
+    <h1 class="animate">Projects</h1>
+    <p class="animate">Fetched live from my GitHub profile</p>
   </header>
 
-  <main class="container reveal">
+  <main class="container">
     <div class="projects-grid" id="github-projects"></div>
   </main>
 
-  <footer>
-    &copy; 2026 Nikunj Mirajkar. All rights reserved.
-  </footer>
+  <footer>&copy; 2026 Nikunj Mirajkar. All rights reserved.</footer>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
