--- a/skills.html
+++ b/skills.html
@@ -4,35 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills | Nikunj Mirajkar</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="description" content="Cloud & DevOps skills: AWS, Terraform, Docker, CI/CD, Linux, networking and APIs." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://nikunjmirajkar.com/skills.html" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">Nikunj</div>
-
     <ul class="nav-links" id="main-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a class="active" href="skills.html">Skills</a></li>
-      <li><a href="gaming.html">Gaming</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a class="active" href="/skills.html">Skills</a></li>
+      <li><a href="/gaming.html">Gaming</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
-
     <div class="menu-toggle nav-toggle">&#9776;</div>
   </nav>
 
-  <header class="page-hero reveal">
-    <h1>Skills</h1>
-    <p>Cloud • DevOps • Platform Engineering • Backend • Networking</p>
+  <header class="page-hero" data-stagger="container">
+    <h1 class="animate">Skills</h1>
+    <p class="animate">Cloud • DevOps • Platform Engineering • Backend • Networking</p>
+    <div class="badge-row animate">
+      <span class="skill-badge">AWS</span>
+      <span class="skill-badge">Terraform</span>
+      <span class="skill-badge">Docker</span>
+      <span class="skill-badge">GitHub Actions</span>
+      <span class="skill-badge">Linux</span>
+      <span class="skill-badge">REST APIs</span>
+    </div>
   </header>
 
-  <main class="skills-wrap reveal">
+  <main class="skills-wrap" data-stagger="container">
     <section class="skills-grid">
-
-      <div class="skill-card">
+      <div class="skill-card animate">
         <h3>Cloud & Infrastructure</h3>
         <ul>
           <li>AWS: EC2, VPC, Security Groups, ALB, Route 53</li>
@@ -41,34 +49,34 @@
         </ul>
       </div>
 
-      <div class="skill-card">
+      <div class="skill-card animate">
         <h3>DevOps & CI/CD</h3>
         <ul>
-          <li>Docker & Docker Compose (multi-service)</li>
-          <li>GitHub Actions CI/CD pipelines</li>
-          <li>Automation mindset: repeatable builds</li>
+          <li>Docker & Docker Compose</li>
+          <li>GitHub Actions pipelines</li>
+          <li>Automation mindset</li>
         </ul>
       </div>
 
-      <div class="skill-card">
+      <div class="skill-card animate">
         <h3>Infrastructure as Code</h3>
         <ul>
           <li>Terraform: init / plan / apply / destroy</li>
-          <li>Outputs, variables, reusable structure</li>
-          <li>Provisioning: VPC + EC2 + user-data automation</li>
+          <li>Variables, outputs, clean structure</li>
+          <li>Provisioning VPC + EC2 + user-data automation</li>
         </ul>
       </div>
 
-      <div class="skill-card">
+      <div class="skill-card animate">
         <h3>Backend & APIs</h3>
         <ul>
           <li>REST APIs, microservices communication</li>
           <li>Python, Java</li>
-          <li>Routing & API gateway concepts</li>
+          <li>Routing & gateway fundamentals</li>
         </ul>
       </div>
 
-      <div class="skill-card">
+      <div class="skill-card animate">
         <h3>Databases & Messaging</h3>
         <ul>
           <li>SQLite, MySQL</li>
@@ -76,40 +84,19 @@
         </ul>
       </div>
 
-      <div class="skill-card">
+      <div class="skill-card animate">
         <h3>Security & Reliability</h3>
         <ul>
           <li>HTTPS routing, CORS troubleshooting</li>
-          <li>Least-exposure access (restricted SSH)</li>
+          <li>Restricted SSH access</li>
           <li>Logs/metrics mindset</li>
         </ul>
-      </div>
-
-    </section>
-
-    <section class="skills-callout">
-      <h2>What I bring to a team</h2>
-      <div class="callout-grid">
-        <div class="callout-item">
-          <h4>Automation-first</h4>
-          <p>I prefer repeatable pipelines and IaC over manual steps.</p>
-        </div>
-        <div class="callout-item">
-          <h4>Production troubleshooting</h4>
-          <p>Comfortable debugging routing, CORS, containers, and deployment issues.</p>
-        </div>
-        <div class="callout-item">
-          <h4>Clear documentation</h4>
-          <p>I write clean READMEs and structured steps for smooth handovers.</p>
-        </div>
       </div>
     </section>
   </main>
 
-  <footer>
-    &copy; 2026 Nikunj Mirajkar. All rights reserved.
-  </footer>
+  <footer>&copy; 2026 Nikunj Mirajkar. All rights reserved.</footer>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
