--- a/about.html
+++ b/about.html
@@ -4,38 +4,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Nikunj Mirajkar</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="description" content="About Nikunj Mirajkar — Cloud & DevOps graduate focused on AWS, Terraform, Docker, CI/CD, Linux and deployment troubleshooting." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://nikunjmirajkar.com/about.html" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">Nikunj</div>
-
     <ul class="nav-links" id="main-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a class="active" href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="gaming.html">Gaming</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a class="active" href="/about.html">About</a></li>
+      <li><a href="/projects.html">Projects</a></li>
+      <li><a href="/skills.html">Skills</a></li>
+      <li><a href="/gaming.html">Gaming</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
-
     <div class="menu-toggle nav-toggle">&#9776;</div>
   </nav>
 
-  <header class="page-hero reveal">
-    <h1>About Me</h1>
-    <p>Cloud • DevOps • Platform Engineering</p>
+  <header class="page-hero" data-stagger="container">
+    <h1 class="animate">About Me</h1>
+    <p class="animate">Cloud • DevOps • Platform Engineering</p>
   </header>
 
-  <main class="container reveal">
-    <div class="card">
+  <main class="container" data-stagger="container">
+    <div class="card animate">
       <p>
         I’m a Cloud & DevOps graduate based in Nottingham, UK, with hands-on experience building and deploying
         cloud-native systems using AWS, Docker, CI/CD pipelines, and Infrastructure as Code (Terraform).
-        Through practical projects, I’ve worked on microservices architectures, API routing, secure HTTPS traffic via
-        load balancers, and cloud networking fundamentals (VPCs, subnets, security groups, IP-restricted access).
+        I’ve worked on microservices architectures, API routing, HTTPS traffic via load balancers, and cloud networking
+        fundamentals (VPCs, subnets, security groups, IP-restricted access).
       </p>
       <p>
         I’m comfortable working in Linux environments, using Git/GitHub daily, and building backend services with REST APIs in Python/Java.
@@ -44,22 +45,20 @@
       </p>
       <p>
         I’m currently seeking entry-level / graduate roles in <strong>DevOps, Cloud Engineering, Platform Engineering, or Infrastructure</strong>
-        in the UK, where I can contribute to scalable systems, automation, and operational reliability.
+        in the UK.
       </p>
       <p><strong>Right to work in the UK.</strong></p>
     </div>
 
-    <div class="card">
+    <div class="card animate">
       <h3>Certification</h3>
       <p><strong>Microsoft Certified: Azure Fundamentals (AZ-900)</strong></p>
       <p class="muted">Cloud concepts • Core Azure services • Security & pricing fundamentals</p>
     </div>
   </main>
 
-  <footer>
-    &copy; 2026 Nikunj Mirajkar. All rights reserved.
-  </footer>
+  <footer>&copy; 2026 Nikunj Mirajkar. All rights reserved.</footer>
 
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
